--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -1,3 +1,23 @@
-h1 {
-  color: pink;
+@import url('https://fonts.googleapis.com/css?family=Eczar');
+
+*:before, 
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body {
+  box-sizing: border-box;
+  font-family: 'Eczar', serif;
+}
+
+
+header {
+  margin-top: 3em;
+  text-align: center;
+
+  h1, h2 {
+    font-size: 2.5em;
+  }
 }
