--- a/public/styles.css
+++ b/public/styles.css
@@ -15,3 +15,11 @@ header {
   header h1, header h2 {
     font-size: 2.5em; }
 
+.searchForm input {
+  border: 1px solid black;
+  font-size: 3em;
+  padding: 1.5em;
+  color: grey;
+  width: 400px;
+  height: 100px; }
+
