--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -22,14 +22,20 @@ header {
   }
 }
 
+.search-bar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .searchForm {
   input {
+    text-align: center;
     border: 1px solid black;
     font-size: 3em;
-    padding: 1.5em;
+    padding: 1em;
     color: grey;
-    width: 400px;
+    width: 500px;
     height: 100px;
   }
 }
