--- a/public/styles.css
+++ b/public/styles.css
@@ -15,11 +15,17 @@ header {
   header h1, header h2 {
     font-size: 2.5em; }
 
+.search-bar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
 .searchForm input {
+  text-align: center;
   border: 1px solid black;
   font-size: 3em;
-  padding: 1.5em;
+  padding: 1em;
   color: grey;
-  width: 400px;
+  width: 500px;
   height: 100px; }
 
