--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -17,6 +17,11 @@ header {
   margin-top: 3em;
   text-align: center;
 
+  img {
+    height: 100px;
+    width: 100px;
+  }
+
   h1, h2 {
     font-size: 2.5em;
   }
@@ -38,4 +43,38 @@ header {
     width: 500px;
     height: 100px;
   }
+}
+
+.results-view-container {
+  display: flex;
+  margin: 3em auto;
+  flex-wrap: wrap;
+  width: 90%;
+}
+
+.result-card {
+  border: 1px solid black;
+  width: 250px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  
+
+  .img-name-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    img {
+      width: 50px;
+      height: 50px;
+    }
+  }
+
+  
+
 }
