--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -34,7 +34,7 @@ header {
 }
 
 .searchForm {
-  input {
+  .searchInput {
     text-align: center;
     border: 1px solid black;
     font-size: 3em;
