--- a/public/styles.css
+++ b/public/styles.css
@@ -23,7 +23,7 @@ header {
   flex-direction: column;
   align-items: center; }
 
-.searchForm input {
+.searchForm .searchInput {
   text-align: center;
   border: 1px solid black;
   font-size: 3em;
