--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -23,7 +23,7 @@ header {
   }
 
   h1, h2 {
-    font-size: 2.5em;
+    font-size: 2.3em;
   }
 }
 
@@ -37,19 +37,22 @@ header {
   .searchInput {
     text-align: center;
     border: 1px solid black;
-    font-size: 3em;
+    font-size: 2em;
     padding: 1em;
     color: grey;
     width: 500px;
-    height: 100px;
+    height: 50px;
   }
 }
 
 .results-view-container {
-  display: flex;
   margin: 3em auto;
+  display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
   width: 90%;
+  border: 1px solid goldenrod;
+  
 }
 
 .result-card {
