--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ header {
     height: 100px;
     width: 100px; }
   header h1, header h2 {
-    font-size: 2.5em; }
+    font-size: 2.3em; }
 
 .search-bar-container {
   display: flex;
@@ -26,17 +26,19 @@ header {
 .searchForm .searchInput {
   text-align: center;
   border: 1px solid black;
-  font-size: 3em;
+  font-size: 2em;
   padding: 1em;
   color: grey;
   width: 500px;
-  height: 100px; }
+  height: 50px; }
 
 .results-view-container {
-  display: flex;
   margin: 3em auto;
+  display: flex;
   flex-wrap: wrap;
-  width: 90%; }
+  justify-content: space-around;
+  width: 90%;
+  border: 1px solid goldenrod; }
 
 .result-card {
   border: 1px solid black;
