Fix search highlight feature
The bug was caused by improperly creating DOM
nodes in Inferno. Discovered had to use React
dangerouslySetInnerHTML to set HTML from
API highlighted search values.

--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -63,6 +63,9 @@ header {
   flex-direction: column;
   justify-content: space-between;
 
+  .highlighted em {
+    background-color: yellow;
+  }
   
 
   .img-name-container{
