--- a/public/styles.css
+++ b/public/styles.css
@@ -32,8 +32,20 @@ header {
   width: 500px;
   height: 50px; }
 
+.results-facelist-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 3em auto; }
+  .results-facelist-container .facelist-container {
+    width: 30%; }
+  .results-facelist-container .results-view-container {
+    width: 70%; }
+
+.facelist-container {
+  border: 1px solid black; }
+
 .results-view-container {
-  margin: 3em auto;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
