--- a/public/styles.css
+++ b/public/styles.css
@@ -55,7 +55,7 @@ header {
     border: 1px solid black;
     color: grey;
     margin-bottom: 1em;
-    width: 50%;
+    width: 80%;
     height: 50px; }
 
 .facet-highlight {
@@ -77,7 +77,8 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px; }
+  padding: 10px;
+  margin-bottom: 1.5em; }
   .result-card:hover {
     border: 1px solid goldenrod; }
   .result-card .highlighted em {
