Refactor Sass folder structure

--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -1,156 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Eczar');
+@import "/base/base";
+@import "/components/spinner";
+@import "/components/header";
+@import "/components/search";
+@import "/components/app";
+@import "/components/facetlist";
+@import "/components/resultsview";
+@import "/components/resultcard";
 
-$default-font-color: grey;
-
-
-
-*:before, 
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-body {
-  box-sizing: border-box;
-  font-family: 'Eczar', serif;
-}
-
-
-header {
-  margin-top: 3em;
-  text-align: center;
-
-  img {
-    height: 100px;
-    width: 100px;
-  }
-
-  h1, h2 {
-    font-size: 2.3em;
-  }
-}
-
-.search-bar-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.searchForm {
-  .searchInput {
-    text-align: center;
-    border: 1px solid black;
-    font-size: 2em;
-    padding: 1em;
-    color: $default-font-color;
-    width: 500px;
-    height: 50px;
-  }
-}
-
-
-.results-facelist-container {
-  display: flex;
-  justify-content: space-around;
-  margin: 3em auto;
-
-  .facelist-container {
-    width: 20%;
-  }
-
-  .results-view-container {
-    width: 70%;
-  }
-}
-
-.facelist-container {
-  border: 1px solid black;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
-  .category-tag {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    color: $default-font-color;
-    margin-bottom: 1em;
-    width: 80%;
-    height: 50px;
-  }
-}
-
-
-.facet-highlight {
-  background-color: lighten(black, 8);
-  color: white;
-}
-
-.results-view-container {
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 90%;
-  border: 1px solid goldenrod;
-}
-
-.result-card {
-  border: 1px solid black;
-  width: 250px;
-  height: 250px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 10px;
-  margin-bottom: 1.5em;
-  &:hover {
-    border: 1px solid goldenrod;
-  }
-
-  .highlighted em {
-    background-color: yellow;
-  }
-  
-
-  .img-name-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    img {
-      width: 50px;
-      height: 50px;
-    }
-  }
-
-}
-
-
-.spinner {
-  margin: 2em auto 0;
-  border: 15px solid rgb(244, 188, 188);
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-  border-top-color: transparent; 
-  animation: rotate 2s infinite linear;
-  
-  @keyframes rotate {
-    0%    { transform: rotate(0deg);  }
-    100%  { transform: rotate(360deg);  }
-  }
-}
-
-/*
-  Spinner Citation
-
-  https://stackoverflow.com/questions/42234855/is-it-possible-to-draw-a-partial-circle-outline-in-css-open-ring-shape  
-
-*/
