Fix app name display in ResultCard
Have to create a new string with sliced off
name and concat 3 dots... at the end if the
app name is longer than length of 20.

--- a/dev/App/sass/components/_resultcard.scss
+++ b/dev/App/sass/components/_resultcard.scss
@@ -19,9 +19,11 @@
     .img-name-container{
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
       text-align: center;
+      height: 150px;
+      border: 1px solid green;
   
       img {
         width: 50px;
