--- a/public/styles.css
+++ b/public/styles.css
@@ -106,9 +106,11 @@ header {
   .result-card .img-name-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    text-align: center; }
+    text-align: center;
+    height: 150px;
+    border: 1px solid green; }
     .result-card .img-name-container img {
       width: 50px;
       height: 50px; }
