--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -3,6 +3,7 @@
 @import "/components/spinner";
 @import "/components/header";
 @import "/components/search";
+@import "/components/sortby";
 @import "/components/app";
 @import "/components/facetlist";
 @import "/components/resultsview";
