--- a/public/styles.css
+++ b/public/styles.css
@@ -52,6 +52,24 @@ header {
   width: 500px;
   height: 50px; }
 
+.sortby-container {
+  border: 1px solid black;
+  padding: 1em;
+  height: 50px;
+  width: 300px;
+  display: flex;
+  align-items: center; }
+
+.app-container {
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid aquamarine; }
+
+.search-sort-container {
+  display: flex;
+  width: 90%;
+  justify-content: space-between; }
+
 .results-facetlist-container {
   display: flex;
   justify-content: space-around;
