--- a/public/styles.css
+++ b/public/styles.css
@@ -52,13 +52,26 @@ header {
   width: 500px;
   height: 50px; }
 
-.sortby-container {
+.sortby-container .sortby-row {
   border: 1px solid black;
-  padding: 1em;
   height: 50px;
-  width: 300px;
+  width: 300px; }
+
+.sortby-container .btn-dropdown {
   display: flex;
-  align-items: center; }
+  flex-direction: column; }
+  .sortby-container .btn-dropdown .btn {
+    border: 1px solid black;
+    height: 50px;
+    width: 300px;
+    font-size: 1em;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+
+.sortby-container .hideDropdown {
+  display: none; }
 
 .app-container {
   width: 90%;
