--- a/public/styles.css
+++ b/public/styles.css
@@ -52,16 +52,26 @@ header {
   width: 500px;
   height: 50px; }
 
-.sortby-container .sortby-row {
-  border: 1px solid black;
+.sortby-container .sortby-header-container {
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
   height: 50px;
-  width: 300px; }
+  width: 300px;
+  display: flex;
+  align-items: center; }
+  .sortby-container .sortby-header-container .sortby-header {
+    margin-left: 1em; }
 
 .sortby-container .btn-dropdown {
   display: flex;
   flex-direction: column; }
   .sortby-container .btn-dropdown .btn {
-    border: 1px solid black;
+    border-top: 0;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
     height: 50px;
     width: 300px;
     font-size: 1em;
