--- a/dev/App/sass/components/_app.scss
+++ b/dev/App/sass/components/_app.scss
@@ -3,19 +3,23 @@
   width: 90%;
   margin: 0 auto;
   border: 1px solid aquamarine;
+  min-height: 100vh;
 }
 
 .search-sort-container {
   display: flex;
   width: 90%;
   justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 3em;
+
 }
 
 
 .results-facetlist-container {
   display: flex;
   justify-content: space-around;
-  margin: 3em auto;
+  margin: 0 auto;
 
   .facetlist-container {
     width: 20%;
