--- a/dev/App/sass/components/_sortby.scss
+++ b/dev/App/sass/components/_sortby.scss
@@ -1,5 +1,4 @@
-@mixin baseSortByRowStyling($top-border: true) {
-  border-top: if($top-border, 1px solid black, 0);
+@mixin baseSortByRowStyling() {
   border-right: 1px solid black;
   border-bottom: 1px solid black;
   border-left: 1px solid black;
@@ -10,9 +9,11 @@
 
 
 .sortby-container {
-  
+  position: relative;
+
   .sortby-header-container {
-    @include baseSortByRowStyling(true); 
+    border-top: 1px solid black;
+    @include baseSortByRowStyling(); 
     display: flex;
     
     align-items: center;
@@ -24,12 +25,15 @@
 
 
   .btn-dropdown {
+    position: absolute;
+    top: 100%;
+
     display: flex;
     flex-direction: column;
     
     .btn {
       
-      @include baseSortByRowStyling(false);
+      @include baseSortByRowStyling();
 
       font-size: 1em;
       background-color: white;
