Change initial index init settings
Changed the number of hits returned from
index from 20 to 50.

--- a/dev/App/sass/components/_app.scss
+++ b/dev/App/sass/components/_app.scss
@@ -10,7 +10,7 @@
   display: flex;
   width: 90%;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: 3em;
 
 }
