--- a/dev/App/sass/components/_spinner.scss
+++ b/dev/App/sass/components/_spinner.scss
@@ -1,6 +1,6 @@
 .spinner {
     margin: 2em auto 0;
-    border: 15px solid rgb(244, 188, 188);
+    border: 15px solid #2571ED;
     border-radius: 50%;
     height: 100px;
     width: 100px;
