--- a/dev/App/sass/components/_header.scss
+++ b/dev/App/sass/components/_header.scss
@@ -1,13 +1,11 @@
 header {
-    margin-top: 3em;
-    text-align: center;
-  
-    img {
-      height: 100px;
-      width: 100px;
-    }
-  
-    h1, h2 {
-      font-size: 2.3em;
-    }
-  }
+  margin: 1em 0 1.5em 0;
+  text-align: center;
+  font-size: 2em;
+  font-weight: bold;  
+
+  img {
+    height: 100px;
+    width: 100px;
+  }    
+}
