Add ErrorMessage component

--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -5,6 +5,7 @@
 @import "/components/search";
 @import "/components/sortby";
 @import "/components/app";
+@import "/components/errormessage";
 @import "/components/facetlist";
 @import "/components/resultsview";
 @import "/components/resultcard";
