--- a/public/styles.css
+++ b/public/styles.css
@@ -126,6 +126,17 @@ header {
   .results-facetlist-container .results-view-container {
     width: 70%; }
 
+.error-message {
+  height: 200px;
+  width: 80%;
+  background-color: #F8F8F8;
+  color: #0B0B0B;
+  text-align: center;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 .facetlist-container {
   border: 1px solid black;
   height: 100%;
