--- a/public/styles.css
+++ b/public/styles.css
@@ -192,8 +192,7 @@ header {
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    height: 150px;
-    border: 1px solid green; }
+    height: 150px; }
     .result-card .img-name-container img {
       width: 50px;
       height: 50px; }
