Continue work on pagination

--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -2,6 +2,7 @@
 @import "/base/base";
 @import "/components/spinner";
 @import "/components/header";
+@import "/components/pagination";
 @import "/components/search";
 @import "/components/sortby";
 @import "/components/app";
