--- a/dev/App/sass/components/_header.scss
+++ b/dev/App/sass/components/_header.scss
@@ -1,8 +1,9 @@
 header {
-  margin: 1em 0 1.5em 0;
+  margin: 1em 0 3em 0;
   text-align: center;
   font-size: 2em;
-  font-weight: bold;  
+  font-weight: bold;
+  width: 100%;  
 
   img {
     height: 100px;
