--- a/public/styles.css
+++ b/public/styles.css
@@ -30,21 +30,23 @@ body {
     https://stackoverflow.com/questions/42234855/is-it-possible-to-draw-a-partial-circle-outline-in-css-open-ring-shape  
   */
 header {
-  margin: 1em 0 1.5em 0;
+  margin: 1em 0 3em 0;
   text-align: center;
   font-size: 2em;
-  font-weight: bold; }
+  font-weight: bold;
+  width: 100%; }
   header img {
     height: 100px;
     width: 100px; }
 
 .pagination-container {
-  width: 80%;
+  width: 60%;
   height: 50px;
   border: 1px solid black;
   display: flex;
   align-items: center;
-  justify-content: flex-start; }
+  justify-content: center;
+  margin-bottom: 5em; }
   .pagination-container .pagination-first,
   .pagination-container .pagination-previous,
   .pagination-container .pagination-next,
@@ -134,12 +136,17 @@ header {
   border: 1px solid aquamarine;
   min-height: 100vh; }
 
+.header-search-sort-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
+
 .search-sort-container {
   display: flex;
   width: 90%;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 3em; }
+  margin-bottom: 5em; }
 
 .results-facetlist-container {
   display: flex;
