Fix calculatePagination function

--- a/public/styles.css
+++ b/public/styles.css
@@ -73,6 +73,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: center; }
+    .pagination-tiles-container .pagination-tiles.current-tile {
+      background-color: #2571ED;
+      color: white; }
 
 .search-bar-container {
   display: flex;
