--- a/dev/App/sass/components/_pagination.scss
+++ b/dev/App/sass/components/_pagination.scss
@@ -42,6 +42,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &.current-tile {
+      background-color: #2571ED;
+      color: white;
+    }
   }
   
 }
