Add Star image asset to ResultCard

--- a/dev/App/sass/components/_resultcard.scss
+++ b/dev/App/sass/components/_resultcard.scss
@@ -15,6 +15,12 @@
     .highlighted em {
       background-color: yellow;
     }
+
+    .yellow-star {
+      width: 20px;
+      height: 20px;
+    }
+    
     
   
     .img-name-container{
