--- a/dev/App/sass/components/_facetlist.scss
+++ b/dev/App/sass/components/_facetlist.scss
@@ -1,7 +1,5 @@
-$default-font-color: grey;
-
 .facetlist-container {
-    border: 1px solid black;
+    border: $default-border-color-weight;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -12,7 +10,7 @@ $default-font-color: grey;
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid black;
+      border: $default-border-color-weight;
       color: $default-font-color;
       margin-bottom: 1em;
       width: 80%;
@@ -21,6 +19,6 @@ $default-font-color: grey;
   }
 
   .facet-highlight {
-    background-color: lighten(black, 8);
-    color: white;
+    background-color: $facet-highlight-bg-color;
+    color: $facet-font-color;
   }
