--- a/dev/App/sass/components/_sortby.scss
+++ b/dev/App/sass/components/_sortby.scss
@@ -1,13 +1,3 @@
-@mixin baseSortByRowStyling() {
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
-  height: 50px;
-  width: 300px;
-}
-
-
-
 .sortby-container {
   position: relative;
 
@@ -23,7 +13,7 @@
   }
 
   .sortby-header-container {
-    border-top: 1px solid black;
+    border-top: $default-border-color-weight;
 
     @include baseSortByRowStyling(); 
     display: flex;
@@ -77,7 +67,7 @@
       @include baseSortByRowStyling();
 
       font-size: 1em;
-      background-color: white;
+      background-color: $sortby-btn-bg-color;
      
       display: flex;
       align-items: center;
