--- a/dev/App/sass/styles.scss
+++ b/dev/App/sass/styles.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Eczar');
 @import "/base/base";
+@import "/base/mixins";
+@import "/base/variables";
 @import "/components/spinner";
 @import "/components/header";
 @import "/components/pagination";
