--- a/dev/App/sass/components/_search.scss
+++ b/dev/App/sass/components/_search.scss
@@ -11,7 +11,7 @@
       font-size: 2em;
       padding: 1em;
       color: $default-font-color;
-      width: 500px;
-      height: 50px;
+      width: 100%;
+      height: 40px;
     }
   }
