--- a/public/styles.css
+++ b/public/styles.css
@@ -94,8 +94,8 @@ header {
   font-size: 2em;
   padding: 1em;
   color: grey;
-  width: 500px;
-  height: 50px; }
+  width: 100%;
+  height: 40px; }
 
 .sortby-container {
   position: relative; }
@@ -176,12 +176,12 @@ header {
 
 .results-facetlist-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0 auto; }
   .results-facetlist-container .facetlist-container {
     width: 20%; }
   .results-facetlist-container .results-view-container {
-    width: 70%; }
+    width: 75%; }
 
 .error-message {
   height: 200px;
