--- a/public/styles.css
+++ b/public/styles.css
@@ -159,7 +159,6 @@ header {
 .app-container {
   width: 90%;
   margin: 0 auto;
-  border: 1px solid aquamarine;
   min-height: 100vh; }
 
 .header-search-sort-container {
@@ -195,7 +194,6 @@ header {
   justify-content: center; }
 
 .facetlist-container {
-  border: 1px solid black;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -220,8 +218,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 90%;
-  border: 1px solid goldenrod; }
+  width: 90%; }
 
 .result-card {
   border: 1px solid black;
